@@ -65,7 +65,7 @@ static int tr_cmp(X509_TRUST **a, X509_TRUST **b);
 static void trtable_free(X509_TRUST *p);
 
 static int trust_1oidany(X509_TRUST *trust, X509 *x, int flags);
-static int trust_any(X509_TRUST *trust, X509 *x, int flags);
+static int trust_compat(X509_TRUST *trust, X509 *x, int flags);
 
 static int obj_trust(int id, X509 *x, int flags);
 static int (*default_trust)(int id, X509 *x, int flags) = obj_trust;
@@ -76,7 +76,7 @@ static int (*default_trust)(int id, X509 *x, int flags) = obj_trust;
  */
 
 static X509_TRUST trstandard[] = {
-{X509_TRUST_ANY, 0, trust_any, "Any", 0, NULL},
+{X509_TRUST_COMPAT, 0, trust_compat, "compatible", 0, NULL},
 {X509_TRUST_SSL_CLIENT, 0, trust_1oidany, "SSL Client", NID_client_auth, NULL},
 {X509_TRUST_SSL_SERVER, 0, trust_1oidany, "SSL Client", NID_server_auth, NULL},
 {X509_TRUST_EMAIL, 0, trust_1oidany, "S/MIME email", NID_email_protect, NULL},
@@ -107,8 +107,8 @@ int X509_check_trust(X509 *x, int id, int flags)
 	X509_TRUST *pt;
 	int idx;
 	if(id == -1) return 1;
-	if(!(idx = X509_TRUST_get_by_id(id)))
-			return default_trust(id, x, flags);
+	idx = X509_TRUST_get_by_id(id);
+	if(idx == -1) return default_trust(id, x, flags);
 	pt = X509_TRUST_get0(idx);
 	return pt->check_trust(pt, x, flags);
 }
@@ -230,6 +230,11 @@ static int trust_1oidany(X509_TRUST *trust, X509 *x, int flags)
 	/* we don't have any trust settings: for compatibility
 	 * we return trusted if it is self signed
 	 */
+	return trust_compat(trust, x, flags);
+}
+
+static int trust_compat(X509_TRUST *trust, X509 *x, int flags)
+{
 	X509_check_purpose(x, -1, 0);
 	if(x->ex_flags & EXFLAG_SS) return X509_TRUST_TRUSTED;
 	else return X509_TRUST_UNTRUSTED;
@@ -257,7 +262,3 @@ static int obj_trust(int id, X509 *x, int flags)
 	return X509_TRUST_UNTRUSTED;
 }
 
-static int trust_any(X509_TRUST *trust, X509 *x, int flags)
-{
-	return X509_TRUST_TRUSTED;
-}
