@@ -344,9 +344,10 @@ typedef struct x509_purpose_st {
 #define X509_PURPOSE_SMIME_SIGN		4
 #define X509_PURPOSE_SMIME_ENCRYPT	5
 #define X509_PURPOSE_CRL_SIGN		6
+#define X509_PURPOSE_ANY		7
 
 #define X509_PURPOSE_MIN		1
-#define X509_PURPOSE_MAX		6
+#define X509_PURPOSE_MAX		7
 
 DECLARE_STACK_OF(X509_PURPOSE)
 
